Bug 194298: inherit from the shell instead of the parent.  The patch is contributed by Michael Kaply <mkaply@us.ibm.com>.